Pinch-zooming doesn't work in tabs that have been dragged into a different window
Categories
(Core :: Panning and Zooming, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox97 | --- | verified |
People
(Reporter: mstange, Assigned: tnikkel)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Steps to reproduce:
- Pinch-zoom a page and verify that it works.
- Drag the tab into a different window (could be an existing window, or a new window by detaching the tab).
- Pinch-zoom the page again, in the different window.
Expected results:
Pinch-zooming should work normally.
Actual results:
Nothing happens in response to the pinch-zoom gesture.
If the tab is dragged back into the original window, pinch-zooming works again.
| Assignee | ||
Comment 1•5 years ago
|
||
The zoom constraints do not allow zoom, which means they probably haven't gotten an update from content at all and are in their initial values. Not a recent regression, 2020-11-01 has this bug.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Fix is probably just hooking up the zoom constraints client to a notification to refresh zoom constraints when we do a swapDocShells call, but what notification that is, not sure.
| Assignee | ||
Comment 3•5 years ago
|
||
Looks like nsFrameLoader::SwapWithOtherLoader/nsFrameLoader::SwapWithOtherRemoteLoader calls BackingScaleFactorChanged
https://searchfox.org/mozilla-central/rev/4648b6ee31c2519b1753023e4f4853b14fdd16e5/dom/base/nsFrameLoader.cpp#1358
https://searchfox.org/mozilla-central/rev/4648b6ee31c2519b1753023e4f4853b14fdd16e5/dom/base/nsFrameLoader.cpp#1793
which calls nsPresContext::UIResolutionChangedSync
and that gets propagated through process etc.
| Assignee | ||
Comment 4•5 years ago
|
||
I guess we need to do this every time we get a new APZC tree manager (because that is where the zoom constraints map/cache is stored). I'm not sure how to detect that or if there are other cases we haven't covered.
Updated•5 years ago
|
Comment 5•5 years ago
|
||
There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:tnikkel, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 8•4 years ago
|
||
Comment 10•4 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/e7b011f92cf4
https://hg.mozilla.org/mozilla-central/rev/fd1d5e8fb5d0
Updated•4 years ago
|
Comment 11•4 years ago
|
||
Reproduced this bug using an affected Nightly build (2021-04-27), using Win 10 x64 with touchscreen.
The issue is verified as fixed on latest Beta 97.0b7.
Description
•